new version of my portfolio GHASSEN SADDEM

--- a/index.html
+++ b/index.html
@@ -4,53 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>potrfolio Ghassen</title>
-   <link rel="stylesheet" href="style.css">
-   <!-- Font Awesome CDN font icon CSS -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <title>Portfolio Ghassen</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome CDN font icon CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-   <div class="hero-header">
-    <div class="wrapper">
-        <header>
-            <div class="logo">
-                <i class="fa-solid fa-g"></i>
-                <div class="logo-text">Ghassen Saddem</div>
-            </div>
-            <nav>
-                <div class="togglebtn">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+    <div class="hero-header">
+        <div class="wrapper">
+            <header>
+                <div class="logo">
+                    <i class="fas fa-g"></i>
+                    <div class="logo-text">Ghassen Saddem</div>
                 </div>
-                <ul class="navlinks">
-                    <li><a href="#">home</a></li>
-                    <li><a href="#">portfolio</a></li>
-                    <li><a href="#">resume</a></li>
-                    <li><a href="#">BLOG</a></li>
-                    <li><a href="#">contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <div class="container">
-            <div class="hero-pic">
-                <img src="./photo.jpg" alt="profile pic">
-            </div>
-            <div class="hero-text">
-                <h4>Bonjour, je suis <span class="">Developpeur web</span></h4>
-                <h1>Ghassen Saddem</h1>
-                <p>age 20 ans</p>
-                <div class="btn-group">
-                    <a href="#" class="btn">Download CV</a>
-                    <a href="#" class="btn">contact</a>
+                <nav>
+                    <div class="togglebtn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <ul class="navlinks">
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">portfolio</a></li>
+                        <li><a href="#">resume</a></li>
+                        <li><a href="#">blog</a></li>
+                        <li><a href="#">contact</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="container">
+                <div class="hero-pic">
+                    <img src="./photo.jpg" alt="profile pic">
                 </div>
-                <div class="social">
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <div class="hero-text">
+                    <h4>Bonjour, je suis <span class="input"></span></h4>
+                    <h1>Ghassen Saddem</h1>
+                    <p>Age 20 ans, étudie à l'ESPRIT</p>
+                    <div class="btn-group">
+                        <a href="#" class="btn active">Download CV</a>
+                        <a href="#" class="btn">Contact</a>
+                    </div>
+                    <div class="social">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-   </div>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.0/typed.min.js"></script> 
+    <script>
+        var togglebtn = document.querySelector(".togglebtn");
+        var nav = document.querySelector(".navlinks");
+        togglebtn.addEventListener("click", function(){
+            this.classList.toggle("click");
+            nav.classList.toggle("open");
+        });
+
+        var typed = new Typed(".input", {
+            strings: ["computer engineer", "graphic designer", "web developer"],
+            typeSpeed: 70,
+            backSpeed: 50,
+            loop: true
+        });
+    </script> 
 </body>
+</html>
